# Density-Analysis-of-Nitrogen-Containing-Molecules

./: LICENSE  README.md  requirements.txt
COD_Density_Pretraining/: ALIGNN_Model.py
Data_Integration/: COD-SMILES-to-MOL.py  CODcsv-to-Database.py  CrystalDensity_Calculation.py  Nitrogen-containing-Molecules-to-Database.py  SMILES-to-Database.py
Density Analysis of Nitrogen-Containing Molecules/: README.md
Density Analysis of Nitrogen-Containing Molecules/COD_Density_Pretraining/: Database-to-TrainData.py  MOL_to_Graph.py  Train.py
Density Analysis of Nitrogen-Containing Molecules/Data_Integration/: Database_Analysis.py  Reaxys-SMILES-to-MOL.py
Density Analysis of Nitrogen-Containing Molecules/NDensity_Transfer_Model/: Database-to-TrainData.py
Density Analysis of Nitrogen-Containing Molecules/SMILES2MOL/: install_smiles2mol.py
Density Analysis of Nitrogen-Containing Molecules/SMILES2MOL/src/smiles2mol/: config.py
Density Analysis of Nitrogen-Containing Molecules/SMILES2MOL/src/smiles2mol.egg-info/: PKG-INFO
Density Analysis of Nitrogen-Containing Molecules/SMILES2MOL/src/smiles2mol/smiles2mol.egg-info/: SOURCES.txt  requires.txt
Density Analysis of Nitrogen-Containing Molecules/SMILES2MOL/tests/: test_core.py
NDensity_Transfer_Model/: ALIGNN_Model.py  MOL_to_Graph.py  Train_N.py
SMILES2MOL/: README_CN.md  pyproject.toml
SMILES2MOL/src/smiles2mol/: __init__.py  core.py  utils.py
SMILES2MOL/src/smiles2mol.egg-info/: SOURCES.txt  requires.txt  top_level.txt
SMILES2MOL/src/smiles2mol/smiles2mol.egg-info/: PKG-INFO
